fixes with css reset, wrong margins etc

--- a/src/App.css
+++ b/src/App.css
@@ -16,10 +16,11 @@ h1 {
 	color: var(--grey-900);
 	font-size: 2rem;
 	width: 100%;
+	margin: 0;
 }
 
 form {
-	width: 48vw;
+	width: 46rem;
 	background-color: var(--white);
 	border-radius: 10px;
 	padding: 2.5rem;
@@ -40,13 +41,15 @@ form {
 }
 
 input {
-	height: 30px;
-	margin: 5px 0px;
-	padding: 10px;
+	height: 3.2rem;
+	display: flex;
+	padding: 0.75rem 1.5rem;
 	background-color: var(--white);
-	border: solid black 1px;
+	border: 1px solid var(--grey-500);
 	border-radius: 5px;
-	color: black;
+	color: var(--grey-900);
+	line-height: 150%; /* 1.6875rem */
+	font-family: Karla;
 }
 
 .row {
@@ -56,12 +59,16 @@ input {
 /* ---- Medium (Tablet) 768px x 1024px ---- */
 
 @media (min-width: 450px) and (max-width: 820px) {
+	#root {
+		padding: 8rem 2rem;
+	}
+
 	form {
-		width: 85%;
+		width: 100%;
 	}
 
 	.radio-input-container {
-		width: 42%;
+		width: 50%;
 	}
 
 	.radio-input-container label {
@@ -75,7 +82,7 @@ input {
 	}
 
 	form {
-		width: 92%;
+		width: 100%;
 		padding: 1.5rem;
 	}
 
