--- a/src/components/Button/Button.css
+++ b/src/components/Button/Button.css
@@ -9,7 +9,6 @@ button {
 	border: none;
 	font-size: 16px;
 	font-weight: 600;
-	margin: 1rem 0;
 	width: 100%;
 }
 
