--- a/src/components/Form/HardCodedForm.css
+++ b/src/components/Form/HardCodedForm.css
@@ -41,15 +41,6 @@ form {
 	flex-direction: column;
 }
 
-input {
-	height: 30px;
-	margin: 5px 0px;
-	padding: 10px;
-	background-color: var(--white);
-	border: solid black 1px;
-	border-radius: 5px;
-	color: black;
-}
 
 input[type="radio"] {
 	height: 10px;
@@ -61,6 +52,7 @@ fieldset.radio-question-container {
 	padding: 0;
 	display: flex;
 	flex-direction: row;
+	gap: 1rem;
 	width: 100%;
 }
 
