--- a/src/components/Form/Radio/RadioHelp.css
+++ b/src/components/Form/Radio/RadioHelp.css
@@ -48,14 +48,15 @@ input[type="radio"]:checked ~ span.radio-button img {
 	display: flex;
 	justify-content: start;
 	align-items: center;
-	width: 45%;
+	width: 50%;
 	margin-block: 1rem;
 	border-radius: 10px;
-	padding-left: 1.3rem;
+	padding:  0.75rem 1.5rem;
 }
 
 .radio-input-container label {
 	font-size: 18px;
+	margin: 0;
 }
 
 /* for radio error message  */
@@ -80,6 +81,7 @@ fieldset {
 	padding: 0;
 	margin: 0;
 	width: 100%;
+	gap:  1rem;
 	display: flex;
 	justify-content: space-between;
 }
