--- a/src/components/Form/TextareaInput/TextareaInput.css
+++ b/src/components/Form/TextareaInput/TextareaInput.css
@@ -6,11 +6,10 @@ textarea:active {
 
 textarea {
 	background-color: var(--white);
-	border: solid black 1px;
+	border: 1px solid var(--grey-500);
 	border-radius: 5px;
-	color: black;
+	color: var(--green-900);
 	padding: 10px;
-	margin: 10px 0px;
 }
 
 .textarea-input {
