--- a/src/index.css
+++ b/src/index.css
@@ -24,6 +24,14 @@
 	outline: 0.1rem solid var(--green-600);
 }
 
+*,
+*::before,
+*::after {
+	box-sizing: border-box;
+	margin: 0;
+	padding: 0;
+}
+
 body {
 	margin: 0;
 	display: flex;
